add the driver endpoints
