# src/models/Driver.ts
@@ -1,32 +1,38 @@
 import mongoose, { Schema, Document, Types } from 'mongoose';
 
-export interface IUser extends Document {
-  name: string;
-  email: string;
+export interface IDriver extends Document {
+  first_name: string;
+  last_name: string;
+  email?: string;
   mobile_number: string;
-  city: string;
-  address: string;
-  route: string;
   company_id: Types.ObjectId;
+  address: string;
+  city: string;
+  state: string;
   latitude: string;
   longitude: string;
-  password: string; 
+  password: string;
+  profile_picture: string;
+  pin?: string; 
 }
 
-const DriverSchema = new Schema<IUser>(
+const DriverSchema = new Schema<IDriver>(
   {
-    name: { type: String, required: true },
-    email: { type: String, required: true, unique: true },
+    first_name: { type: String, required: true },
+    last_name: { type: String, required: true },
+    email: { type: String, unique: true, sparse: true }, 
     mobile_number: { type: String, required: true },
-    city: { type: String },
-    address: { type: String },
-    route: { type: String },
     company_id: { type: Schema.Types.ObjectId, ref: 'Company', required: true },
-    latitude: { type: String },
-    longitude: { type: String },
+    address: { type: String, required: true },
+    city: { type: String, required: true },
+    state: { type: String, required: true },
+    latitude: { type: String, required: true },
+    longitude: { type: String, required: true },
     password: { type: String, required: true },
+    pin: { type: String, default: null }, 
+    profile_picture: { type: String, default: '' }
   },
   { timestamps: true }
 );
 
-export const Driver = mongoose.models.Driver || mongoose.model<IUser>('Driver', DriverSchema);
+export const Driver = mongoose.models.Driver || mongoose.model<IDriver>('Driver', DriverSchema);
