# utils/validation/authSchema.ts
@@ -1,8 +1,10 @@
 import { z } from "zod";
 
 export const signInSchema = z.object({
-  email: z.string().email(),
-  password: z.string().min(6),
+  email: z.string().email().optional(),
+  phone: z.string().optional(),
+  password: z.string().min(6).optional(),
+  pin: z.string().length(5).optional(),
 });
 
 export const verifyOtpSchema = z.object({
